--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
     <div class="copy">© <span id="year"></span> Antojitos MX</div>
   </footer>
 
-  <script src="app.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
+
